--- a/book/icpcbook.tex
+++ b/book/icpcbook.tex
@@ -46,8 +46,10 @@
 \include{preface} 
 
 \mainmatter 
+\include{gotchas} 
 \include{stringprocessing} 
 \include{geometry} 
+\include{midatlantic} 
 
 \backmatter 
 %\include{glossary} 
