--- a/book/geometry.tex
+++ b/book/geometry.tex
@@ -142,7 +142,7 @@ Source: \href{http://en.wikipedia.org/wiki/Line-line_intersection}{http://en.wik
 This code is from a solution to 2011/F (Section~\ref{sec:2011-f-lineofsight}) where the 
 parallel and rectangular cases do not occur. (TBD: provide complete implementation.)
 
-\inputminted{java}{code/lineintersection.java}
+\inputminted[fontsize=\footnotesize,linenos=true]{java}{code/lineintersection.java}
 
 %
 %
@@ -213,5 +213,5 @@ Figure~\ref{fig:polygonareadeterminant} shows how to multiply this out
 \end{itemize}
 
 \paragraph{Code}
-\inputminted{java}{code/polygonarea.java}
+\inputminted[fontsize=\footnotesize,linenos=true]{java}{code/polygonarea.java}
 
