--- a/book/midatlantic.tex
+++ b/book/midatlantic.tex
@@ -33,6 +33,14 @@ simpler solutions (replacing '(' and ')' with ' ( ' and ' ) ' before splitting o
 may work, too.
 Recursive descent parsing should be used to analyse the syntactical structure of the input.
 
+\subsection{C Out Of Sight}
+\label{sec:2007-c-sight}
+
+Dynamic programming.  
+
+Applying BFS will time out due to an explosion in the number
+of successor states, most of which will have been already seen.
+
 \subsection{D Witness Redaction}
 \label{sec:2007-d-witness}
 This problem can be solved with regular expressions and zero-width lookaround splitting.
@@ -48,6 +56,19 @@ Can be solved with regular expressions.
 
 \href{Judge data}{http://midatl.radford.edu/docs/pastProblems/08contest/JudgingData/G-stems/}
 appears broken, even on ICPC site.
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\section{2010}
+\href{(Problem PDF 2010)}{http://midatl.radford.edu/docs/pastProblems/10contest/MidAtlantic2010.pdf}
+
+\subsection{C Cells}
+\label{sec:2010-c-cells}
+
+Solvable using Monte Carlo simulation.  May use java.awt.geom.* to implement containment check.
+Also solvable using numerical integration (in polar coordinates).
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{2011}
 
