--- a/book/preface.tex
+++ b/book/preface.tex
@@ -7,3 +7,7 @@ It is hosted on github at
 \href{https://github.com/VTACMProgrammingTeam/ICPCHandbook}{https://github.com/VTACMProgrammingTeam/ICPCHandbook}.
 If you wish to contribute, please send email to godmar@gmail.com
 
+The following authors have contributed to this book in its current form:
+\begin{itemize}
+    \item Godmar Back \texttt{<godmar@gmail.com>}
+\end{itemize}
