--- a/book/references.bib
+++ b/book/references.bib
@@ -3,3 +3,12 @@
    title = "Polygon Area",
    howpublished = "From MathWorld--A Wolfram Web Resource.  \url{http://mathworld.wolfram.com/PolygonArea.html}"
 }
+
+@book{Pearl:1984,
+    author = {Pearl, Judea},
+    title = {Heuristics:  intelligent search strategies for computer problem solving},
+    year = {1984},
+    isbn = {0-201-05594-5},
+    publisher = {Addison-Wesley Longman Publishing Co., Inc.},
+    address = {Boston, MA, USA},
+} 
