fixed \href commands

--- a/book/midatlantic.tex
+++ b/book/midatlantic.tex
@@ -7,7 +7,7 @@ multiple years.
 
 \section{2005}
 
-\href{(Problem PDF 2005)}{http://midatl.radford.edu/docs/pastProblems/05contest/MidAtlantic2005.pdf}
+\href{http://midatl.radford.edu/docs/pastProblems/05contest/MidAtlantic2005.pdf}{(Problem PDF 2005)}
 
 \subsection{C Extrusion}
 \label{sec:2005-c-extrusion}
@@ -15,7 +15,7 @@ multiple years.
 Straightforward application of polygon area formula, see Section~\ref{sec:areapolygon}.
 
 \section{2006}
-\href{(Problem PDF 2006)}{http://midatl.radford.edu/docs/pastProblems/06contest/MidAtlantic2006.pdf}
+\href{http://midatl.radford.edu/docs/pastProblems/06contest/MidAtlantic2006.pdf}{(Problem PDF 2006)}
 
 \subsection{E Marbles}
 \label{sec:2006-e-marbles}
@@ -23,7 +23,7 @@ A simple state space exploration problem solvable with straightforward BFS explo
 Catch: judge input data missed the "0 0 0" line.
 
 \section{2007}
-\href{(Problem PDF 2007)}{http://midatl.radford.edu/docs/pastProblems/07contest/MidAtlantic2007.pdf}
+\href{http://midatl.radford.edu/docs/pastProblems/07contest/MidAtlantic2007.pdf}{(Problem PDF 2007)}
 
 \subsection{B Mobiles Alabama}
 \label{sec:2007-b-mobile}
@@ -47,20 +47,20 @@ This problem can be solved with regular expressions and zero-width lookaround sp
 See Section~\ref{sec:lookaroundsplitting}.
 
 \section{2008}
-\href{(Problem PDF 2008)}{http://midatl.radford.edu/docs/pastProblems/08contest/MidAtlantic2008.pdf}
+\href{http://midatl.radford.edu/docs/pastProblems/08contest/MidAtlantic2008.pdf}{(Problem PDF 2008)}
 
 \subsection{G Stems Sell}
 \label{sec:2008-g-stems}
 
 Can be solved with regular expressions.
 
-\href{Judge data}{http://midatl.radford.edu/docs/pastProblems/08contest/JudgingData/G-stems/}
+\href{http://midatl.radford.edu/docs/pastProblems/08contest/JudgingData/G-stems/}{Judge data}
 appears broken, even on ICPC site.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{2010}
-\href{(Problem PDF 2010)}{http://midatl.radford.edu/docs/pastProblems/10contest/MidAtlantic2010.pdf}
+\href{http://midatl.radford.edu/docs/pastProblems/10contest/MidAtlantic2010.pdf}{(Problem PDF 2010)}
 
 \subsection{C Cells}
 \label{sec:2010-c-cells}
@@ -72,7 +72,7 @@ Also solvable using numerical integration (in polar coordinates).
 
 \section{2011}
 
-\href{(Problem PDF 2011)}{http://midatl.radford.edu/docs/pastProblems/11contest/MidAtlantic2011.pdf}
+\href{http://midatl.radford.edu/docs/pastProblems/11contest/MidAtlantic2011.pdf}{(Problem PDF 2011)}
 
 \subsection{B Raggedy, Raggedy}
 \label{sec:2011-b-raggedy}
