--- a/book/preface.tex
+++ b/book/preface.tex
@@ -5,7 +5,7 @@ in preparation for it.
 
 It is hosted on github at
 \href{https://github.com/VTACMProgrammingTeam/ICPCHandbook}{https://github.com/VTACMProgrammingTeam/ICPCHandbook}.
-If you wish to contribute, please send email to godmar@gmail.com
+If you wish to contribute, please send email to godmar@gmail.com to get access to the repository.
 
 The following authors have contributed to this book in its current form:
 \begin{itemize}
