--- a/book/references.bib
+++ b/book/references.bib
@@ -12,3 +12,12 @@
     publisher = {Addison-Wesley Longman Publishing Co., Inc.},
     address = {Boston, MA, USA},
 } 
+
+@misc{CoxRegexp:2007,
+    title = {Regular Expression Matching Can Be Simple And Fast (but is slow in {Java}, {Perl}, {PhP}, {Python}, {Ruby}, ...)},
+    howpublished = "\url{http://swtch.com/~rsc/regexp/regexp1.html}",
+    author = {Russ Cox},
+    month = January,
+    year = 2007 
+}
+
