--- a/book/midatlantic.tex
+++ b/book/midatlantic.tex
@@ -80,6 +80,13 @@ Also solvable using numerical integration (in polar coordinates).
 This problem can be solved using dynamic programming.
 Note that there may be leading spaces on some input lines.
 
+\subsection{E Losers are Winners}
+\label{sec:2011-e-losers}
+
+An easy sorting problem.
+During the contest, many students overlooked the case that a team's weight could go up.
+Beware of ``clever'' solutions that fail for the $n=1$ case, see~\ref{sec:gotchas}.
+
 \subsection{F Line of Sight}
 \label{sec:2011-f-lineofsight}
 
