--- a/book/references.bib
+++ b/book/references.bib
@@ -21,3 +21,22 @@
     year = 2007 
 }
 
+@article{Bitner:1975,
+    author = {Bitner, James R. and Reingold, Edward M.},
+    title = {Backtrack programming techniques},
+    journal = {Commun. ACM},
+    issue_date = {Nov. 1975},
+    volume = {18},
+    number = {11},
+    month = nov,
+    year = {1975},
+    issn = {0001-0782},
+    pages = {651--656},
+    numpages = {6},
+    url = {http://doi.acm.org/10.1145/361219.361224},
+    doi = {10.1145/361219.361224},
+    acmid = {361224},
+    publisher = {ACM},
+    address = {New York, NY, USA},
+    keywords = {backtrack, combinatorial computing, depth-first search, difference-preserving codes, exhaustive search, macros, non-attacking queen's problem, pentominoes, squaring the square, tiling problems},
+} 
