started math chapter

--- a/book/icpcbook.tex
+++ b/book/icpcbook.tex
@@ -51,6 +51,7 @@
 \include{simulation} 
 \include{searching} 
 \include{stringprocessing} 
+\include{math} 
 \include{geometry} 
 \include{gotchas} 
 \include{midatlantic} 
