--- a/book/defs.tex
+++ b/book/defs.tex
@@ -2,3 +2,4 @@
 % Some definitions
 %
 \def\code#1{\texttt{#1}}
+\def\inputjava#1{\inputminted[fontsize=\footnotesize,linenos=true]{java}{code/#1.java}}
